--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Service oriented to send basic product information",
   "main": "app.js",
   "scripts": {
+    "dev": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
